[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hiwhl"
version = "0.0.1"
authors = [
  { name="6peng", email="6peng@proton.me" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hi6peng/hiwhl"
"Bug Tracker" = "https://github.com/h66peng/hiwhl/issues"
